fixed: skipp llama